Jugador y Bala con velocidades diferentes y limitaciones de desplazamiento

--- a/db/P4_JUEGO.lpc.html
+++ b/db/P4_JUEGO.lpc.html
@@ -16,104 +16,8 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >display34f</TD>
-<TD >78</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >56</TD>
-<TD >1</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >display34e</TD>
-<TD >78</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >56</TD>
-<TD >1</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >display34d</TD>
-<TD >78</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >56</TD>
-<TD >1</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >display34c</TD>
-<TD >78</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >56</TD>
-<TD >1</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >display34b</TD>
-<TD >78</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >56</TD>
-<TD >1</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >display34a</TD>
-<TD >78</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >56</TD>
-<TD >1</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >56</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >displayC</TD>
-<TD >26</TD>
+<TD >bullet1</TD>
+<TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,12 +32,28 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >displayD</TD>
-<TD >26</TD>
+<TD >player1</TD>
+<TD >66</TD>
+<TD >11</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >11</TD>
 <TD >1</TD>
+<TD >11</TD>
+<TD >11</TD>
+<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >teclado1</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,8 +64,8 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >displayU</TD>
-<TD >26</TD>
+<TD >clk_divisor</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -178,26 +98,10 @@
 <TR >
 <TD >vga_ctrl_inst</TD>
 <TD >14</TD>
-<TD >3</TD>
 <TD >0</TD>
-<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >37</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >cntDiv0</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
