Jugador 2 agregado. Lógica de colisiones de balas lista. falta otras colisiones y puntajes

--- a/db/P4_JUEGO.lpc.html
+++ b/db/P4_JUEGO.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >bullet1</TD>
+<TD >bullet2_draw</TD>
 <TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,7 +32,39 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >player1</TD>
+<TD >bullet1_draw</TD>
+<TD >66</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >player2_draw</TD>
+<TD >66</TD>
+<TD >11</TD>
+<TD >0</TD>
+<TD >11</TD>
+<TD >1</TD>
+<TD >11</TD>
+<TD >11</TD>
+<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >player1_draw</TD>
 <TD >66</TD>
 <TD >11</TD>
 <TD >0</TD>
