ADDED: Ambos teclados, niveles. MISSING: Dibujar personajes ROM y cambiar colores

--- a/db/P4_JUEGO.lpc.html
+++ b/db/P4_JUEGO.lpc.html
@@ -82,13 +82,13 @@
 <TR >
 <TD >player2_draw</TD>
 <TD >66</TD>
-<TD >11</TD>
 <TD >0</TD>
-<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >1</TD>
-<TD >11</TD>
-<TD >11</TD>
-<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -98,13 +98,13 @@
 <TR >
 <TD >player1_draw</TD>
 <TD >66</TD>
-<TD >11</TD>
 <TD >0</TD>
-<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >1</TD>
-<TD >11</TD>
-<TD >11</TD>
-<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -225,6 +225,54 @@
 </TR>
 <TR >
 <TD >display34a</TD>
+<TD >78</TD>
+<TD >56</TD>
+<TD >0</TD>
+<TD >56</TD>
+<TD >1</TD>
+<TD >56</TD>
+<TD >56</TD>
+<TD >56</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >displayLevelNumber</TD>
+<TD >26</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >displayLV_V</TD>
+<TD >78</TD>
+<TD >56</TD>
+<TD >0</TD>
+<TD >56</TD>
+<TD >1</TD>
+<TD >56</TD>
+<TD >56</TD>
+<TD >56</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >displayLV_L</TD>
 <TD >78</TD>
 <TD >56</TD>
 <TD >0</TD>
